--- a/hipsa_home/group_meeting/templates/group_meeting/home.html
+++ b/hipsa_home/group_meeting/templates/group_meeting/home.html
@@ -19,6 +19,7 @@
                         &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;▶회의록(담당 - 이혁)</br>
                         &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;- 정설이의 논문 관리 DB도 같이 연결할 수 있도록하겠습니다.</br>
                         &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;- 그룹 미팅, 논문 관리, Howto 관리 페이지를 작성하였습니다.</br>
+                        
                         &nbsp;&nbsp;&nbsp;▶Naver LABS ML Challenge(담당 - 이혁)</br>
                         &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;-현재 학습과 시험을 위한 환경설정 완료하였습니다.</br>
                         &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;-Outdoor 종목도 신청 및 데이터셋 다운로드 완료하였습니다.</br>
@@ -26,11 +27,14 @@
                         &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;-이번주 발표사항이 없습니다.</br>
                         &nbsp;&nbsp;&nbsp;▶CUDA(담당 - 이혁)</br>
                         &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;- NetVLAD에서 사용하는 여러 라이브러리들이 GPU버전을 지원합니다 이에관한 자료 찾아보겠습니다.</br>				
+                        &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;- CPU버전이 구동되지 않아 아직 어렵습니다.</br>				
                         &nbsp;&nbsp;&nbsp;▶실습(담당 - 이혁, 손정설)</br>
-                        &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;- 미니프로젝트중 기말고사 일정이 나오는대로 영상 제작 여부를 정하겠습니다.</br>
+                        &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;- 몇몇 학생이 github 사용을 물어보았습니다.</br>
+                        
         
                     <h3>&nbsp;&nbsp;PDRS(담당 - 손정설)</br></h3>
-                        &nbsp;&nbsp;&nbsp;- 발표할 사항이 있습니다.</br>
+                        &nbsp;&nbsp;&nbsp;- 발표할 사항이 없습니다.</br>
                     <h3>&nbsp;&nbsp;기타</br></h3>
+                        &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;- 모든 과목 비대면 시험이라는 공지가 있습니다.</br>
         </body>
 </html>
