--- a/hipsa_home/group_meeting/templates/group_meeting/home.html
+++ b/hipsa_home/group_meeting/templates/group_meeting/home.html
@@ -15,26 +15,27 @@
         
                 <h2>이번주 주제</h2>
                     <h3>&nbsp;&nbsp;스터디</br></h3>
-                        &nbsp;&nbsp;&nbsp;▶DB</br>
-                        &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;▶회의록(담당 - 이혁)</br>
-                        &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;- 정설이의 논문 관리 DB도 같이 연결할 수 있도록하겠습니다.</br>
-                        &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;- 그룹 미팅, 논문 관리, Howto 관리 페이지를 작성하였습니다.</br>
-                        
-                        &nbsp;&nbsp;&nbsp;▶Naver LABS ML Challenge(담당 - 이혁)</br>
-                        &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;-현재 학습과 시험을 위한 환경설정 완료하였습니다.</br>
-                        &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;-Outdoor 종목도 신청 및 데이터셋 다운로드 완료하였습니다.</br>
-                        &nbsp;&nbsp;&nbsp;▶유전알고리즘(담당 - 이혁)</br>
-                        &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;-이번주 발표사항이 없습니다.</br>
-                        &nbsp;&nbsp;&nbsp;▶CUDA(담당 - 이혁)</br>
-                        &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;- NetVLAD에서 사용하는 여러 라이브러리들이 GPU버전을 지원합니다 이에관한 자료 찾아보겠습니다.</br>				
-                        &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;- CPU버전이 구동되지 않아 아직 어렵습니다.</br>				
-                        &nbsp;&nbsp;&nbsp;▶실습(담당 - 이혁, 손정설)</br>
-                        &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;- 몇몇 학생이 github 사용을 물어보았습니다.</br>
+                        &nbsp;&nbsp;▶DB</br>
+                        &nbsp;&nbsp;&nbsp;&nbsp;▶회의록(담당 - 이혁)</br>
+                        &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;- 그룹 미팅, 논문 관리, Howto 관리 페이지를 작성하였습니다.</br>
+                        &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;- 기존 DB에 문제없이 연결되었지만 시간부족으로 현재 회의록은 html 파일로 하드코딩 하였습니다.</br>
+                        &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;- 현재 문제로는 도커가 작동된 후 1시간 이내에 꺼지는 점입니다. </br>
+                        &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;- 작성중인 코드에 관한 문서도 같이 작성하고 있습니다. </br>
+                        &nbsp;&nbsp;▶Naver LABS ML Challenge(담당 - 이혁)</br>
+                        &nbsp;&nbsp;&nbsp;&nbsp;-도커에 환경설정을 완료하였지만, 메모리 부족으로 실행이 되지 않습니다.</br>
+                        &nbsp;&nbsp;&nbsp;&nbsp;-이번에 받은 컴퓨터에 네이티브로 설치하여 실험해보겠습니다. </br>
+                        &nbsp;&nbsp;▶유전알고리즘(담당 - 이혁)</br>
+                        &nbsp;&nbsp;&nbsp;&nbsp;-이번주 발표사항이 없습니다.</br>
+                        &nbsp;&nbsp;▶CUDA(담당 - 이혁)</br>
+                        &nbsp;&nbsp;&nbsp;&nbsp;- NetVLAD에서 사용하는 여러 라이브러리들이 GPU버전을 지원합니다 이에관한 자료 찾아보겠습니다.</br>				
+                        &nbsp;&nbsp;&nbsp;&nbsp;- CPU버전 구동 후에 GPU버전도 동작시켜보겠습니다.</br>				
+                        &nbsp;&nbsp;▶실습(담당 - 이혁, 손정설)</br>
+                        &nbsp;&nbsp;&nbsp;&nbsp;- 몇몇 학생이 github 사용을 물어보았습니다.</br>
                         
         
                     <h3>&nbsp;&nbsp;PDRS(담당 - 손정설)</br></h3>
-                        &nbsp;&nbsp;&nbsp;- 발표할 사항이 없습니다.</br>
+                        &nbsp;&nbsp;&nbsp;&nbsp;- 발표할 사항이 없습니다.</br>
                     <h3>&nbsp;&nbsp;기타</br></h3>
-                        &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;- 모든 과목 비대면 시험이라는 공지가 있습니다.</br>
+                        &nbsp;&nbsp;&nbsp;&nbsp;- 모든 과목 비대면 시험이라는 공지가 있습니다.</br>
         </body>
 </html>
