--- a/hipsa_home/group_meeting/templates/group_meeting/home.html
+++ b/hipsa_home/group_meeting/templates/group_meeting/home.html
@@ -16,11 +16,12 @@
                 <h2>이번주 주제</h2>
                     <h3>&nbsp;&nbsp;스터디</br></h3>
                         &nbsp;&nbsp;▶DB</br>
-                        &nbsp;&nbsp;&nbsp;&nbsp;▶회의록(담당 - 이혁)</br>
+                        &nbsp;&nbsp;&nbsp;&nbsp;▶회의록(담당 - 이혁, 손정설)</br>
                         &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;- 그룹 미팅, 논문 관리, Howto 관리 페이지를 작성하였습니다.</br>
+                        &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;- 세가지 각 기능별로 따로 url과 페이지를 가지므로 각자 개발이 가능합니다. </br>
                         &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;- 기존 DB에 문제없이 연결되었지만 시간부족으로 현재 회의록은 html 파일로 하드코딩 하였습니다.</br>
                         &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;- 현재 문제로는 도커가 작동된 후 1시간 이내에 꺼지는 점입니다. </br>
-                        &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;- 작성중인 코드에 관한 문서도 같이 작성하고 있습니다. </br>
+                        &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;- 주요 기능 개발 완료하고 백업하겠습니다. </br>
                         &nbsp;&nbsp;▶Naver LABS ML Challenge(담당 - 이혁)</br>
                         &nbsp;&nbsp;&nbsp;&nbsp;-도커에 환경설정을 완료하였지만, 메모리 부족으로 실행이 되지 않습니다.</br>
                         &nbsp;&nbsp;&nbsp;&nbsp;-이번에 받은 컴퓨터에 네이티브로 설치하여 실험해보겠습니다. </br>
