--- a/hipsa_home/group_meeting/templates/group_meeting/home.html
+++ b/hipsa_home/group_meeting/templates/group_meeting/home.html
@@ -22,15 +22,15 @@
                         &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;- 기존 DB에 문제없이 연결되었지만 시간부족으로 현재 회의록은 html 파일로 하드코딩 하였습니다.</br>
                         &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;- 현재 문제로는 도커가 작동된 후 1시간 이내에 꺼지는 점입니다. </br>
                         &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;- 주요 기능 개발 완료하고 백업하겠습니다. </br>
-                        &nbsp;&nbsp;▶Naver LABS ML Challenge(담당 - 이혁)</br>
+                    <h3>&nbsp;&nbsp;▶Naver LABS ML Challenge(담당 - 이혁)</br></h3>
                         &nbsp;&nbsp;&nbsp;&nbsp;-도커에 환경설정을 완료하였지만, 메모리 부족으로 실행이 되지 않습니다.</br>
                         &nbsp;&nbsp;&nbsp;&nbsp;-이번에 받은 컴퓨터에 네이티브로 설치하여 실험해보겠습니다. </br>
-                        &nbsp;&nbsp;▶유전알고리즘(담당 - 이혁)</br>
+                    <h3>&nbsp;&nbsp;▶유전알고리즘(담당 - 이혁)</br></h3>
                         &nbsp;&nbsp;&nbsp;&nbsp;-이번주 발표사항이 없습니다.</br>
-                        &nbsp;&nbsp;▶CUDA(담당 - 이혁)</br>
+                    <h3>&nbsp;&nbsp;▶CUDA(담당 - 이혁)</br></h3>
                         &nbsp;&nbsp;&nbsp;&nbsp;- NetVLAD에서 사용하는 여러 라이브러리들이 GPU버전을 지원합니다 이에관한 자료 찾아보겠습니다.</br>				
                         &nbsp;&nbsp;&nbsp;&nbsp;- CPU버전 구동 후에 GPU버전도 동작시켜보겠습니다.</br>				
-                        &nbsp;&nbsp;▶실습(담당 - 이혁, 손정설)</br>
+                    <h3>&nbsp;&nbsp;▶실습(담당 - 이혁, 손정설)</br></h3>
                         &nbsp;&nbsp;&nbsp;&nbsp;- 몇몇 학생이 github 사용을 물어보았습니다.</br>
                         
         
