--- a/hipsa_home/group_meeting/templates/group_meeting/home.html
+++ b/hipsa_home/group_meeting/templates/group_meeting/home.html
@@ -34,9 +34,9 @@
                         &nbsp;&nbsp;&nbsp;&nbsp;- 몇몇 학생이 github 사용을 물어보았습니다.</br>
                         
         
-                    <h3>&nbsp;&nbsp;PDRS(담당 - 손정설)</br></h3>
+                    <h3>&nbsp;&nbsp;▶PDRS(담당 - 손정설)</br></h3>
                         &nbsp;&nbsp;&nbsp;&nbsp;- 발표할 사항이 없습니다.</br>
-                    <h3>&nbsp;&nbsp;기타</br></h3>
+                    <h3>&nbsp;&nbsp;▶기타</br></h3>
                         &nbsp;&nbsp;&nbsp;&nbsp;- 모든 과목 비대면 시험이라는 공지가 있습니다.</br>
         </body>
 </html>
