--- a/hipsa_home/group_meeting/templates/group_meeting/home.html
+++ b/hipsa_home/group_meeting/templates/group_meeting/home.html
@@ -1,40 +1,24 @@
 <html>
     <head>
-        <style type = "text/css">
-        #meeting{font-size : 22px}
-        </style>
-        </head>
-        
+        <title>
+            고성능시스템구조연구실 그룹미팅
+        </title>
         <body>
-            <div id="meeting">
-                <div id="header">
-                    <h1>회의 날짜 : 2020603</br>회의 장소 : 연구실</br>참석자 : 김준성, 이혁, 손정설<h1>
-                
-                </div>
-            
-        
-                <h2>이번주 주제</h2>
-                    <h3>&nbsp;&nbsp;스터디</br></h3>
-                        &nbsp;&nbsp;▶DB</br>
-                        &nbsp;&nbsp;&nbsp;&nbsp;▶회의록(담당 - 이혁, 손정설)</br>
-                        &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;- 그룹 미팅, 논문 관리, Howto 관리 페이지를 작성하였습니다.</br>
-                        &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;- 세가지 각 기능별로 따로 url과 페이지를 가지므로 각자 개발이 가능합니다. </br>
-                        &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;- 기존 DB에 문제없이 연결되었지만 시간부족으로 현재 회의록은 html 파일로 하드코딩 하였습니다.</br>
-                        &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;- 현재 문제로는 도커가 작동된 후 1시간 이내에 꺼지는 점입니다. </br>
-                        &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;- 주요 기능 개발 완료하고 백업하겠습니다. </br>
-                    <h3>&nbsp;&nbsp;▶유전알고리즘(담당 - 이혁)</br></h3>
-                        &nbsp;&nbsp;&nbsp;&nbsp;-이번주 발표사항이 없습니다.</br>
-                    <h3>&nbsp;&nbsp;▶CUDA(담당 - 이혁)</br></h3>
-                        &nbsp;&nbsp;&nbsp;&nbsp;- NetVLAD에서 사용하는 여러 라이브러리들이 GPU버전을 지원합니다 이에관한 자료 찾아보겠습니다.</br>				
-                        &nbsp;&nbsp;&nbsp;&nbsp;- CPU버전 구동 후에 GPU버전도 동작시켜보겠습니다.</br>				                        
-                    <h3>&nbsp;&nbsp;Naver LABS ML Challenge(담당 - 이혁)</br></h3>
-                        &nbsp;&nbsp;&nbsp;&nbsp;-도커에 환경설정을 완료하였지만, 메모리 부족으로 실행이 되지 않습니다.</br>
-                        &nbsp;&nbsp;&nbsp;&nbsp;-이번에 받은 컴퓨터에 네이티브로 설치하여 실험해보겠습니다. </br>
-                    <h3>&nbsp;&nbsp;PDRS(담당 - 손정설)</br></h3>
-                        &nbsp;&nbsp;&nbsp;&nbsp;- 발표할 사항이 없습니다.</br>
-                    <h3>&nbsp;&nbsp;실습(담당 - 이혁, 손정설)</br></h3>
-                        &nbsp;&nbsp;&nbsp;&nbsp;- 몇몇 학생이 github 사용을 물어보았습니다.</br>
-                    <h3>&nbsp;&nbsp;기타</br></h3>
-                        &nbsp;&nbsp;&nbsp;&nbsp;- 모든 과목 비대면 시험이라는 공지가 있습니다.</br>
+            <div>
+                <h1>
+                    <a href="">오늘 그룹 미팅</a>
+                </h1>
+            </div>
+            <div>
+                <h1>
+                    <a href="">지난 미팅 목록</a>
+                </h1>
+            </div>
+            <div>
+                <h1>
+                    <a href="">관리</a>
+                </h1>
+            </div>
         </body>
+    </head>
 </html>
