--- a/hipsa_home/group_meeting/templates/group_meeting/list_detail.html
+++ b/hipsa_home/group_meeting/templates/group_meeting/list_detail.html
@@ -2,9 +2,6 @@
 
 <html>
     <head>
-        <title>
-            고성능시스템구조연구실 그룹미팅
-        </title>
         <link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/bootstrap/3.2.0/css/bootstrap.min.css">
         <link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/bootstrap/3.2.0/css/bootstrap-theme.min.css">
         <link rel="stylesheet" href="{% static 'css/blog.css' %}">
@@ -12,18 +9,15 @@
 
     <body>
         <div>
-            <h1>
-                오늘 그룹 미팅
-            </h1>
             <p>
-                회의 날짜 : {{today.date}}<br>
-                회의 장소 : {{today.place}}<br>
+                회의 날짜 : {{meeting.date}}<br>
+                회의 장소 : {{meeting.place}}<br>
                 참석자    : 
-                    {%for a in today.attendent.all %}
+                    {%for a in meeting.attendent.all %}
                         {{a}}
                     {% endfor %}<br>
                 안건
-                    {%for t in today.topic.all %}
+                    {%for t in meeting.topic.all %}
                         <li>{{t}} : 
                             {% for owner in t.owner.all%}
                             {{owner}}
@@ -40,11 +34,6 @@
             </p>
             <p>
             </p>
-        </div>
-        <div>
-            <h2>
-                <a href="{% url 'list'%}">목록</a>
-            </h2>
         </div>
     </body>
 </html>
