--- a/hipsa_home/group_meeting/static/css/group_meeting.css
+++ b/hipsa_home/group_meeting/static/css/group_meeting.css
@@ -5,3 +5,14 @@ h1 a{
 body {
     padding-left: 15px;
 }
+
+.page-header{
+    background-color: #ff9400;
+    margin-top: 0;
+    padding: 20px 20px 20px 40px;
+}
+
+.content{
+    margin-left: 40px;
+}
+
