--- a/hipsa_home/group_meeting/templates/group_meeting/home.html
+++ b/hipsa_home/group_meeting/templates/group_meeting/home.html
@@ -2,15 +2,15 @@
 
 <html>
     <head>
-        <title>
-            고성능시스템구조연구실 그룹미팅
-        </title>
         <link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/bootstrap/3.2.0/css/bootstrap.min.css">
         <link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/bootstrap/3.2.0/css/bootstrap-theme.min.css">
         <link rel="stylesheet" href="{% static 'css/group_meeting.css' %}">
     </head>
 
     <body>
+        <div class="page-header">
+            <h1>고성능시스템구조연구실 그룹미팅</h1>    
+        </div>
         <div>
             <h1>
                 오늘 그룹 미팅
