--- a/hipsa_home/group_meeting/static/css/group_meeting.css
+++ b/hipsa_home/group_meeting/static/css/group_meeting.css
@@ -12,6 +12,11 @@ body {
     padding: 20px 20px 20px 40px;
 }
 
+.page-header h1{
+    color: #ffffff;
+    font-size: 36pt;
+}
+
 .content{
     margin-left: 40px;
 }
