--- a/hipsa_home/group_meeting/static/css/group_meeting.css
+++ b/hipsa_home/group_meeting/static/css/group_meeting.css
@@ -3,11 +3,11 @@ h1 a{
 }
 
 body {
-    padding-left: 15px;
+    padding-left: 1px;
 }
 
 .page-header{
-    background-color: #ff9400;
+    background-color: #0abab5;
     margin-top: 0;
     padding: 20px 20px 20px 40px;
 }
