--- a/hipsa_home/group_meeting/templates/group_meeting/list.html
+++ b/hipsa_home/group_meeting/templates/group_meeting/list.html
@@ -1,20 +1,26 @@
+{% load static %}
+
 <html>
     <head>
         <link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/bootstrap/3.2.0/css/bootstrap.min.css">
         <link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/bootstrap/3.2.0/css/bootstrap-theme.min.css">
-        <h1>그룹 미팅 목록</h1>
+        <link rel="stylesheet" href="{% static 'css/group_meeting.css' %}">
     </head>
+
     <body>
+        <div class="page-header">
+            <h1>그룹미팅 목록</h1>    
+        </div>
         {% for meeting in meetings%}
             <p>
             회의 날짜 : <a href="{% url 'list_detail' meeting_id=meeting.id %}">{{meeting}}</a><br>
             참석자 : 
             {% for a in meeting.attendent.all %}
-            {{a}}
+                {{a}}
             {% endfor %}<br>
             안건 : 
             {% for t in meeting.topic.all %}
-            {{t}} / 
+                {{t}} / 
             {% endfor %}<br>
             </p>
         {% endfor %}
